# aoc25

./: Cargo.toml  LICENSE  run.sh
day01/: Cargo.toml  part1.py
day02/: Cargo.toml  part1.answer  part2.answer
day03/: Cargo.toml  part2.answer
day04/: Cargo.toml
day05/: Cargo.toml  part2.answer
day06/: Cargo.toml  part1.answer  part2.answer
day07/: Cargo.toml  part1.py  part2.answer  part2.py
day08/: Cargo.toml  part2.answer
day09/: Cargo.toml  part1.answer  part2.answer
day10/: Cargo.toml
day11/: Cargo.toml  part2.answer
dayX/: Cargo.toml
