[package]
name = "day11"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
clio = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
petgraph = { workspace = true }

[[bin]]
name = "day11-part1"

[[bin]]
name = "day11-part2"
